infras/k8s/sprint-manifests/sprint-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: sprint-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sprint
  template:
    metadata:
      labels:
        app: sprint
    spec:
      imagePullSecrets:
        - name: authenticate-registry
      hostAliases:
        - ip: "192.168.73.101"
          hostnames:
          - "gitlab.taskscheduler.com"
      containers:
        - name: sprint
          image: longle2003/sprint
---
apiVersion: v1
kind: Service
metadata:
  name: sprint-srv
spec: 
  selector:
    app: sprint
  ports:
    - name: sprint
      protocol: TCP
      port: 4007
      targetPort: 4007
